Patient Registration Error solved, Initial values for Patient Teeth set (when patient register but as well as when Dentist create new user)

--- a/WebApplication1/WebApplication1/Views/Patient/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/Patient/Index.cshtml
@@ -75,7 +75,7 @@
                             </a>
                         </h4>
                     </div>
-                    <div id="collapseTwo" class="panel-collapse collapse">
+                    <div id="collapseTwo" class="panel-collapse collapse in">
                         <div class="panel-body">
                             <table class="table">
                                 <tr>
@@ -97,6 +97,12 @@
                                         @Html.ActionLink("Medical history", "MedicalHistory", "Patient")
                                     </td>
                                 </tr>
+                                <tr>
+                                    <td>
+                                        <span class="glyphicon glyphicon-user"></span>
+                                        @Html.ActionLink("My Teeth", "MyTeeth", "Patient")
+                                    </td>
+                                </tr>
                             </table>
                         </div>
                     </div>
@@ -111,7 +117,7 @@
                             </a>
                         </h4>
                     </div>
-                    <div id="collapseThree" class="panel-collapse collapse in">
+                    <div id="collapseThree" class="panel-collapse collapse">
                         <div class="panel-body">
                             <table class="table">
                                 <tr>
