--- a/WebApplication1/WebApplication1/Views/Account/Register.cshtml
+++ b/WebApplication1/WebApplication1/Views/Account/Register.cshtml
@@ -38,7 +38,10 @@
                 </div>
                 @Html.AntiForgeryToken()
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                <div class="main">                
+                <div class="main">
+
+                    @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control", @placeholder = "First Name" })
+                    @Html.TextBoxFor(m => m.LastName, new { @class = "form-control", @placeholder = "LastName" })
                     @Html.TextBoxFor(m => m.Email, new { @class = "form-control", @placeholder = "Email" })
                     @Html.PasswordFor(m => m.Password, new { @class = "form-control", @placeholder = "Password" })
                     @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control", @placeholder = "Confirm Password" })
