Patient can choose his Dentist when he/she registers.

--- a/WebApplication1/WebApplication1/Views/Patient/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/Patient/Index.cshtml
@@ -25,7 +25,7 @@
         @Html.DisplayFor(d => d.FirstName)
         @Html.DisplayFor(d => d.LastName)
     </h5>
-        <p>Dentist </p>
+        <p>Patient </p>
         <ul>
             <li><span class="glyphicon glyphicon-gift"></span>@Html.DisplayFor(model => model.DateOfBirth)</li>
             <li><span class="glyphicon glyphicon-home"></span>@Html.DisplayFor(model => model.Address)</li>
@@ -37,9 +37,6 @@
 
     </div>
 </div>
-
-
-
 
 <div class="container">
     <div class="row">
