When new patient registers, he/she gets "USER" Role and has it until he/she chooses his/her Dentist. Many options that are related to Dentist actions are forbidden until Dentist is chosen.

--- a/WebApplication1/WebApplication1/Views/Patient/PickDentist.cshtml
+++ b/WebApplication1/WebApplication1/Views/Patient/PickDentist.cshtml
@@ -10,7 +10,7 @@
     @*HTML helper way of input for search
         @Html.TextBox("searchString",null, new {id = "custom-search-input", @class = "form-control input"});*@
 
-    <div class="container" style="padding-left:0px; padding-right:0px">
+    <div class="container" style="padding-left:0px; padding-right:0px; margin-bottom: 20px">
         <div class="row">
             <div class="col-md-3">
                 <div id="custom-search-input">
