--- a/WebApplication1/WebApplication1/Views/Patient/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/Patient/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@model WebApplication1.Models.Patient
+@using WebApplication1.Models
 
 @{
     ViewBag.Title = "Index";
@@ -63,6 +64,8 @@
                         </div>
                     </div>
                 </div>
+@if (ViewContext.HttpContext.User.IsInRole(Role.Patient))
+{
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h4 class="panel-title">
@@ -72,6 +75,7 @@
                             </a>
                         </h4>
                     </div>
+
                     <div id="collapseTwo" class="panel-collapse collapse in">
                         <div class="panel-body">
                             <table class="table">
@@ -104,7 +108,7 @@
                         </div>
                     </div>
                 </div>
-               
+}
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h4 class="panel-title">
