Editing layout for LandingPage

--- a/WebApplication1/WebApplication1/Views/Home/LandingPage.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/LandingPage.cshtml
@@ -127,9 +127,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 text-center">
-                    <span class="sub-head wow fadeInLeft">present your</span>
+                    <span class="sub-head wow fadeInLeft">we present you our</span>
                     <div class="title wow fadeInRight">
-                        <h2>awesome app</h2>
+                        <h2>awesome app - DentisCard</h2>
                     </div>
                 </div>
             </div>
@@ -138,21 +138,21 @@
                     <div class="app-block wow bounceInUp" data-wow-delay=".1s">
                         <i class="fa fa-bolt"></i>
                         <h3>quick & efficiency</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <p>Add all needed information and data for your patient quickly and efficiently.</p>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="app-block wow bounceInUp" data-wow-delay=".2s">
                         <i class="fa fa-life-ring"></i>
                         <h3>any time support</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <p>Contact our support team which is available 24/7.</p>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="app-block wow bounceInUp" data-wow-delay=".3s">
                         <i class="fa fa-paint-brush"></i>
                         <h3>unique design</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <p>Our original design will help you to navigate with ease.</p>
                     </div>
                 </div>
             </div>
@@ -161,21 +161,21 @@
                     <div class="app-block wow bounceInUp" data-wow-delay=".4s">
                         <i class="fa fa-angellist"></i>
                         <h3>corporate branding</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <p>DentisCard is world wide known brand made especially for dentists .</p>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="app-block wow bounceInUp" data-wow-delay=".5s">
                         <i class="fa fa-thumbs-o-up"></i>
-                        <h3>best in qulality</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <h3>best in quality</h3>
+                        <p>DentisCard will offer you all the services that you need for managing your business.</p>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="app-block wow bounceInUp" data-wow-delay=".6s">
                         <i class="fa fa-puzzle-piece"></i>
                         <h3>idea making</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <p>Suggest us what service you need, and we will make it for you!</p>
                     </div>
                 </div>
             </div>
@@ -188,7 +188,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-12 text-center">
-                        <h2 class="wow swing" data-wow-delay=".1s">crazy feature</h2>
+                        <h2 class="wow swing" data-wow-delay=".1s">Multiple features</h2>
                     </div>
                 </div>
                 <div class="row">
@@ -196,8 +196,8 @@
                         <ul class="feature-list-left">
                             <li>
                                 <div class="feature-detail wow fadeInLeft" data-wow-delay=".4s">
-                                    <h4>Custom scrollbars</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
+                                    <h4>Dentist-Patient communication</h4>
+                                    <p>You can easily communicate with your patients</p>
                                 </div>
                                 <div class="feature-icon wow fadeInLeft" data-wow-delay=".3s">
                                     <i class="fa fa-exchange"></i>
@@ -205,8 +205,8 @@
                             </li>
                             <li>
                                 <div class="feature-detail wow fadeInLeft" data-wow-delay=".4s">
-                                    <h4>Robust demo package</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
+                                    <h4>Free demo package</h4>
+                                    <p>Access our demo package for FREE, and later on decide about buying!</p>
                                 </div>
                                 <div class="feature-icon wow fadeInLeft" data-wow-delay=".3s">
                                     <i class="fa fa-star-half-o"></i>
@@ -214,8 +214,8 @@
                             </li>
                             <li>
                                 <div class="feature-detail wow fadeInLeft" data-wow-delay=".4s">
-                                    <h4>Responsive support</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
+                                    <h4>Responsive layout</h4>
+                                    <p>Access our app from any device, at any size and enjoy using it!</p>
                                 </div>
                                 <div class="feature-icon wow fadeInLeft" data-wow-delay=".3s">
                                     <i class="fa fa-arrows-alt"></i>
@@ -223,8 +223,8 @@
                             </li>
                             <li>
                                 <div class="feature-detail wow fadeInLeft" data-wow-delay=".4s">
-                                    <h4>Tons of API callbacks</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
+                                    <h4>Easily modify profile</h4>
+                                    <p>Modifying your and your patient profile is done with ease!</p>
                                 </div>
                                 <div class="feature-icon wow fadeInLeft" data-wow-delay=".3s">
                                     <i class="fa fa-cog"></i>
@@ -242,8 +242,8 @@
                                     <i class="fa fa-arrows-alt"></i>
                                 </div>
                                 <div class="feature-detail wow fadeInRight" data-wow-delay=".4s">
-                                    <h4>Responsive support</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
+                                    <h4>Maximized support</h4>
+                                    <p>Get help with any issue that you face, and get help quickly!</p>
                                 </div>
                             </li>
                             <li>
@@ -251,8 +251,8 @@
                                     <i class="fa fa-cog"></i>
                                 </div>
                                 <div class="feature-detail wow fadeInRight" data-wow-delay=".4s">
-                                    <h4>Tons of API callbacks</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
+                                    <h4>Ask for improvements </h4>
+                                    <p>You need some specific service? Tell us and we will be happy to fulfill your needs</p>
                                 </div>
                             </li>
                             <li>
@@ -260,8 +260,8 @@
                                     <i class="fa fa-mobile"></i>
                                 </div>
                                 <div class="feature-detail wow fadeInRight" data-wow-delay=".4s">
-                                    <h4>rface / Android</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
+                                    <h4>Mobile access</h4>
+                                    <p>Access all you need from your smartphone, easy, quickly and anywhere!</p>
                                 </div>
                             </li>
                             <li>
@@ -269,8 +269,8 @@
                                     <i class="fa fa-undo"></i>
                                 </div>
                                 <div class="feature-detail wow fadeInRight" data-wow-delay=".4s">
-                                    <h4>Auto-sliding</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
+                                    <h4>Track changes</h4>
+                                    <p>See all the changes you made, track all your patients and their medical histories</p>
                                 </div>
                             </li>
                         </ul>
@@ -285,9 +285,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 text-center">
-                    <span class="sub-head wow fadeInLeft">think about</span>
+                    <span class="sub-head wow fadeInLeft">About DentisCard from</span>
                     <div class="title wow fadeInRight">
-                        <h2>why GRAPE best</h2>
+                        <h2>The best dentists</h2>
                     </div>
                 </div>
             </div>
@@ -297,12 +297,12 @@
                 </div>
                 <div class="col-sm-6">
                     <ul class="description-list">
-                        <li class="wow fadeInRight"><span class="des-icon"><i class="fa fa-bomb"></i></span>Nam nec tellus a odio tincidunt auctor a ornare odio</li>
-                        <li class="wow fadeInRight"><span class="des-icon"><i class="fa fa-paw"></i></span>Nam nec tellus a odio tincidunt</li>
-                        <li class="wow fadeInRight"><span class="des-icon"><i class="fa fa-birthday-cake"></i></span>Nam nec tellus a odio tincidunt auctor </li>
-                        <li class="wow fadeInRight"><span class="des-icon"><i class="fa fa-fire-extinguisher"></i></span>Nam nec tellus a odio </li>
-                        <li class="wow fadeInRight"><span class="des-icon"><i class="fa fa-magic"></i></span>Nam nec tellus a odio tincidunt auctor a ornare odio</li>
-                        <li class="wow fadeInRight"><span class="des-icon"><i class="fa fa-rebel"></i></span>Nam nec tellus a odio tincidunt auctor a ornare</li>
+                        <li class="wow fadeInRight"><span class="des-icon"><i class="fa fa-bomb"></i></span>Fantastics app perfect for keeping track of your business</li>
+                        <li class="wow fadeInRight"><span class="des-icon"><i class="fa fa-magic"></i></span>All the things a denits might need are there</li>
+                        <li class="wow fadeInRight"><span class="des-icon"><i class="fa fa-birthday-cake"></i></span>Support team is always there </li>
+                        <li class="wow fadeInRight"><span class="des-icon"><i class="fa fa-fire-extinguisher"></i></span>All problems are solved timely </li>
+                        <li class="wow fadeInRight"><span class="des-icon"><i class="fa fa-magic"></i></span>New featuers that we suggest are implemented</li>
+                        <li class="wow fadeInRight"><span class="des-icon"><i class="fa fa-rebel"></i></span>Helpful application and reliable support team</li>
                     </ul>
                     <!-- /.description-list -->
                 </div>
@@ -318,8 +318,8 @@
                 <div class="row">
                     <div class="col-sm-12 text-center">
                         <div class="video-mask">
-                            <h2 class="wow bounceInDown">how it works</h2>
-                            <a href="https://vimeo.com/45830194" class="play wow rollIn animated"></a>
+                            <h2 class="wow bounceInDown">Take care about your dental health! </h2>
+                            <a href="https://vimeo.com/197195451" class="play wow rollIn animated"></a>
                             <span class="wow bounceInUp">watch video</span>
                         </div>
                     </div>
@@ -339,39 +339,45 @@
                     </div>
                     <div id="owl-demo" class="owl-carousel">
                         <div class="item screenshot-block">
-                            <img src="./~/Content/Images/screenshot.jpg" alt="GRAPE">
+                            <img src="/Content/Images/screenshot1.jpg" alt="GRAPE">
                             <div class="caption">
-                                <a class="test-popup-link" href="./~/Content/Images/screenshot.jpg"><i class="fa fa-plus"></i></a>
+                                <a class="test-popup-link" href="./Content/Images/screenshot1.jpg"><i class="fa fa-plus"></i></a>
                             </div>
                         </div>
                         <div class="item screenshot-block">
-                            <img src="./~/Content/Images/screenshot.jpg" alt="GRAPE">
+                            <img src="/Content/Images/screenshot2.png" alt="GRAPE">
                             <div class="caption">
-                                <a class="test-popup-link" href="./~/Content/Images/screenshot.jpg"><i class="fa fa-plus"></i></a>
+                                <a class="test-popup-link" href="/Content/Images/screenshot2.png"><i class="fa fa-plus"></i></a>
                             </div>
                         </div>
                         <div class="item screenshot-block">
-                            <img src="./~/Content/Images/screenshot.jpg" alt="GRAPE">
+                            <img src="/Content/Images/screenshot3.png" alt="GRAPE">
                             <div class="caption">
-                                <a class="test-popup-link" href="./~/Content/Images/screenshot.jpg"><i class="fa fa-plus"></i></a>
+                                <a class="test-popup-link" href="/Content/Images/screenshot3.png"><i class="fa fa-plus"></i></a>
                             </div>
                         </div>
                         <div class="item screenshot-block">
-                            <img src="./~/Content/Images/screenshot.jpg" alt="GRAPE">
+                            <img src="/Content/Images/screenshot5.png" alt="GRAPE">
                             <div class="caption">
-                                <a class="test-popup-link" href="./~/Content/Images/screenshot.jpg"><i class="fa fa-plus"></i></a>
+                                <a class="test-popup-link" href="/Content/Images/screenshot5.png"><i class="fa fa-plus"></i></a>
                             </div>
                         </div>
                         <div class="item screenshot-block">
-                            <img src="./~/Content/Images/screenshot.jpg" alt="GRAPE">
+                            <img src="/Content/Images/screenshot6.png" alt="GRAPE">
                             <div class="caption">
-                                <a class="test-popup-link" href="./~/Content/Images/screenshot.jpg"><i class="fa fa-plus"></i></a>
+                                <a class="test-popup-link" href="/Content/Images/screenshot6.png"><i class="fa fa-plus"></i></a>
                             </div>
                         </div>
                         <div class="item screenshot-block">
-                            <img src="./~/Content/Images/screenshot.jpg" alt="GRAPE">
+                            <img src="/Content/Images/screenshot7.png" alt="GRAPE">
                             <div class="caption">
-                                <a class="test-popup-link" href="./~/Content/Images/screenshot.jpg"><i class="fa fa-plus"></i></a>
+                                <a class="test-popup-link" href="/Content/Images/screenshot7.png"><i class="fa fa-plus"></i></a>
+                            </div>
+                        </div>
+                        <div class="item screenshot-block">
+                            <img src="/Content/Images/screenshot8.png" alt="GRAPE">
+                            <div class="caption">
+                                <a class="test-popup-link" href="/Content/Images/screenshot8.png"><i class="fa fa-plus"></i></a>
                             </div>
                         </div>
                     </div>
