--- a/WebApplication1/WebApplication1/Views/Dentist/MedicalRecord.cshtml
+++ b/WebApplication1/WebApplication1/Views/Dentist/MedicalRecord.cshtml
@@ -21,9 +21,23 @@
             </div>
         </div>
         <div class="form-group">
+            @Html.Label("Tooth Position", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EnumDropDownListFor(model => model.Tooth.ToothPosition, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.Tooth.ToothPosition, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.Label("Tooth State", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EnumDropDownListFor(model => model.Tooth.ToothState, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.Tooth.ToothState, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
             @Html.LabelFor(model => model.MedicalRecord.Bill, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.MedicalRecord.Bill, new { @class = "form-control", @type = "number", @step="any", @min = "0", @placeholder = "KM" })
+                @Html.EditorFor(model => model.MedicalRecord.Bill, new { @class = "form-control", @type = "number", @step = "any", @min = "0", @placeholder = "KM" })
                 @Html.ValidationMessageFor(model => model.MedicalRecord.Bill, "", new { @class = "text-danger" })
             </div>
         </div>
